# Slicer-DeepSeg

./: .gitignore  LICENSE  README.md  install_libraries.txt
DeepSeg/: CMakeLists.txt  CTestConfig.cmake
DeepSeg/DeepSeg/: DeepSeg.py
DeepSeg/DeepSeg/DeepSegLib/: config.py  models.py  models_deepSeg.py  models_nnUNet.py  models_resunet.py  predict.py  preprocess.py
DeepSeg/DeepSeg/Resources/UI/: DeepSeg.ui
DeepSeg/DeepSegSampleData/: CMakeLists.txt  DeepSegSampleData.py
DeepSeg/DeepSegSampleData/Resources/UI/: DeepSegSampleData.ui
IGS/: CMakeLists.txt  CTestConfig.cmake
IGS/DeepSegV2/: CMakeLists.txt  DeepSegV2.py  requirements.txt
IGS/DeepSegV2/DeepSegV2Lib/: predict.py
IGS/DeepSegV2/Resources/UI/: DeepSegV2.ui
IGS/IGSSampleData/: CMakeLists.txt  IGSSampleData.py
IGS/IGSSampleData/Resources/UI/: IGSSampleData.ui
Slicer-DeepSeg/: CMakeLists.txt  CTestConfig.cmake
Slicer-DeepSeg/DeepSeg/: CMakeLists.txt  DeepSeg.py
Slicer-DeepSeg/DeepSeg/DeepSegLib/: predict.py
Slicer-DeepSeg/DeepSeg/Resources/UI/: DeepSeg.ui
Slicer-DeepSeg/SlicerDeepSeg/: CMakeLists.txt  SlicerDeepSeg.py
Slicer-DeepSeg/SlicerDeepSeg/Resources/UI/: SlicerDeepSeg.ui
Slicer-DeepSeg/SlicerDeepSeg/SlicerDeepSegLib/: __init__.py  models.py  predict.py
